get attribute and set attribute

--- a/index.html
+++ b/index.html
@@ -45,6 +45,36 @@
         <p>paragraph three</p>
    </section>
 
+
+    <!-- get attribute and set attribute -->
+
+        <section id="container2">
+            <p id="para1" class="para text-3xl border-2 border-green-500">this is paragraph one</p>
+            <p class="para">this is paragraph one</p>
+            <p>this is paragraph one</p>
+            <p>this is paragraph one</p>
+        </section>
+
+
+        <button id="eventBtn" onclick="interAction()">
+            Click Me!
+        </button>
+
+
+        <section>
+            <a id="anchor" href="https://www.google.com">Google</a>
+            <button id="show-btn">Show Link</button>
+            <p id="show-link"></p>
+        </section>
+
+
+
+
+
+
+
+
+
     <script src="./app.js"></script>
 </body>
 </html>
