--- a/nodeList.html
+++ b/nodeList.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .para1{
+            background: goldenrod;
+        }
+    </style>
 </head>
 <body>
     <p>paragraph one</p>
@@ -22,6 +27,8 @@
         <button class="btn">Second button</button>
         <button class="btn">Third button</button>
 
+
+       
 
 
     <script>
@@ -67,7 +74,7 @@
             //  allButton.forEach(btn => console.log(btn))
        }
 
-
+        
     </script>
 
 </body>
