--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
       <p>this is footer</p>
     </footer>
 
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
